[package]
name = "em7180"
version = "0.2.0"
description = "A rust driver for the EM7180 (Sensor hub with MPU9250 gyro/accelerometer, embedded Asahi Kasei AK8963C magnetometer, Measurement Specialties' MS5637 Barometer, and ST's M24512DFC I2C EEPROM module)"
authors = ["Luca Zulian <lucagiuggia@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["hal", "IO"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucazulian/em7180"
edition = "2018"
exclude = [
    "docs/",
    "docs/*",
]

[dependencies]
embedded-hal = "0.2.3"
generic-array = "1.0.0"
nb = "1.0.0"

[dependencies.cast]
default-features = false
version = "0.3.0"
uninit = "0.1.0"

[dependencies.safe-transmute]
version =  "0.10.1"
default-features = false
